Atualiza configurações do Docker e do Maven, ajusta variáveis de ambiente, e implementa novas classes e métodos para gerenciamento de usuários e dispositivos. Adiciona testes de integração e unitários, além de configurar o H2 como banco de dados para desenvolvimento e testes.